  [Michele Simionato]
  * Introduced a minimum_distance for the GSIMs, honored for event based and
    scenario calculations
  * Fixed several small issues with the UCERF calculators; now ucerf_hazard
    can be used as a precalculator of gmf_ebrisk
  * Initial support for disaggregation by source
  * Added the ability to import large exposures as CSV (experimental)
  * Changed the source weights to be proportional to the number of GSIMs
    relevant for the tectonic region type, improving the task distribution

  [Daniele Viganò]
  * RPM packages moved to Python 3.5

  [Michele Simionato]
  * Added the ability to dump a specific calculation
  * Changed the signature of the extract command to `oq extract what calc_id`,
    where `what` is a path info plus query string;

  [Graeme Weatherill]
  * Implements significant duration GMPEs of Bommer et al. (2009) and Afshari &
    Stewart (2016)
  * Adds significant duraction IMT definitions to support IMTs

  [Michele Simionato]
  * Run the DbServer as a detached process
  * Improved the test coverage for event based with GMF correlation
  * Optimized the event based risk calculator from ruptures: now the ruptures
    are instantiated in the workers and not in the controller if possible
  * Exported the parameter ses_per_logic_tree_path in the ruptures.csv file
  * Improved the display names for the risk outputs
  * Added a /v1/:calc_id/abort route to the engine server and Abort buttons
    to the WebUI
  * Fixed the seeds properly in the case of vulnerability functions with PMFs:
    now even if the ground motion fields are all equal, the risk numbers
    will be different since there is a different seed per each field
  * Stored a rupture loss table in event based risk calculations
  * Made sure that the number of effective ruptures is stored in csm_info
  * Fixed the HMTK tests to work with numpy from 1.11 to 1.14
  * Added a command `oq shell` to open an embedded (I)Python shell