@@ -92,7 +92,8 @@ class _IMT(with_metaclass(IMTMeta, tuple)):
         return self[0]
 
     def __lt__(self, other):
-        return str(self) < str(other)
+        return (self[0], self[1] or 0, self[2] or 0) < (
+            other[0], other[1] or 0, other[2] or 0)
 
     def __repr__(self):
         return '%s(%s)' % (type(self).__name__,
@@ -190,4 +191,3 @@ class MMI(_IMT):
     of an earthquake in terms of its effects on the earth's surface
     and on humans and their structures.
     """
- 
