@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Fixed the ordering of the IMTs in hazardlib
   * Introduced a minimum_distance for the GSIMs, honored for event based and
     scenario calculations
   * Fixed several small issues with the UCERF calculators; now ucerf_hazard
